apps/media/readarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr
  namespace: media
spec:
  selector:
    app: readarr
  ports:
  - port: 8787
    targetPort: 8787
